2006-04-10  Martin Hunt  <hunt@redhat.com>

	* stat-common.c (_stp_stat_print_histogram): Write a 
	newline at the end of the histogram.

2006-04-09  Martin Hunt  <hunt@redhat.com>

	* print.c (_stp_print_flush): Send 'len" bytes
	instead of 'len+1', which included terminating 0.

	* string.c (_stp_sprintf): Call _stp_vsnprintf()
	instead of vsnprintf().
	(_stp_vsprintf): Ditto.

	* vsprintf.c: New file.

2006-04-05  Will Cohen  <wcohen@redhat.com>

	* string.h (__stp_stdout): Correct initialization.

2006-03-30  Martin Hunt  <hunt@redhat.com>

	* string.c (_stp_string_cat_cstr): Use memcpy() instead of strncpy().

2006-03-26  Martin Hunt  <hunt@redhat.com>

	* bench2/bench.rb (Bench::run): Instead of loading the module 
	once and running against different numbers of threads, load
	and unload the module each time. Then keep track of failures 
	per thread. Also use the new itest to keep the tests the same 
	size regardless of the number of threads.
	(Bench::initialize): Make itest if needed.
	(Bench::load, Stapbench::load): Increase buffer size to 8MB.
	
	* bench2/itest.c: Change arg to be the number of threads 
	instead of the number of millions of calls to make. 
	This makes it easy to divide the work among multiple threads 
	without making the test run many times longer.

2006-03-09  Martin Hunt  <hunt@redhat.com>

	* bench2: New directory containing a benchmark framework.

2006-02-10  Martin Hunt  <hunt@redhat.com>

	* copy.c (_stp_copy_from_user): Revert previous incorrect change.

2006-02-09  Martin Hunt  <hunt@redhat.com>

	* copy.c (_stp_copy_from_user): If access fails,
	return -1.

2006-01-25  Martin Hunt  <hunt@redhat.com>

	* stat.c (_stp_stat_init): Use _stp_alloc_percpu().
	(_stp_stat_del): New function.

	* alloc.c (_stp_alloc_percpu): New function.
	(_stp_free_percpu): New function.

2006-01-19  Martin Hunt  <hunt@redhat.com>

	* pmap-gen.c (_stp_pmap_get): Fix bug where old data
	from agg map could be returned after element was deleted.
